Freed access fix

Tests affected: main.alter_table (MDEV-11071)